# ply

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  TODO  configure.ac  index.html  oneliners.md  params.json  ply.1.html
.github/workflows/: build.yml  main.yml
css/: freelancer.css  style.css
include/: Makefile.am
include/ply/: .gitignore  arch.h  buffer.h  evpipe.h  func.h  internal.h  ir.h  kallsyms.h  node.h  perf_event.h  ply.h  printxf.h  provider.h  sym.h  syscall.h  type.h  utils.h
less/: freelancer.less
lib/: Makefile.am  compile.c  func.c  grammar.y  ir.c  lexer.l  libply.c  node.c  provider.c  qsort_r.c  sym.c  type.c
lib/arch/: aarch64.c  arm.c  powerpc.c  x86_64.c
lib/aux/: evpipe.c  kallsyms.c  perf_event.c  printxf.c  syscall.c  utils.c
lib/built-in/: aggregation.c  buffer.c  built-in.c  built-in.h  flow.c  global.c  math.c  memory.c  print.c  proc.c
lib/provider/: kprobe.c  kprobe.h  kretprobe.c  tracepoint.c  xprobe.c  xprobe.h
lib/util/: kallsyms.c  utils.c
man/: .gitignore  Makefile.am  index.txt  ply.1.ronn
scripts/: agg.fs  execsnoop.ply  net-rx.ply  opensnoop.ply  ptysnoop.ply  ptysnoop.sh  strcmp.s  syscall-fail.ply  test.fs  test.ply  test.py
src/: Makefile  Makefile.am  annotate.c  bpf-syscall.c  bpf-syscall.h  compile.c  compile.h  dtl.c  dtl.h  evpipe.c  fs-ast.c  fs-ast.h  fs-compile.c  fs-ebpf-global.c  fs-ebpf.c  fs-ebpf.h  fs-lex.l  fs-parse.y  fs-sema.c  kallsyms.c  kallsyms.h  libbpf.c  libbpf.h  map.c  map.h  ply  ply.c  ply.h  proto.c  provider-kprobe.c  provider.h  symtable.c  utils.c
src/arch/: arch-aarch64.c  arch-arm.c  arch-null.c  arch-ppc.c  arch-x86_64.c  arch.h
src/include/ply/: arch.h  ast.h  bpf-syscall.h  compile.h  evpipe.h  kallsyms.h  map.h  module.h  ply.h  pvdr.h  symtable.h
src/lang/: ast.c  ast.h  lex.l  parse.y
src/libply/: .gitignore  Makefile.am  func.c  grammar.y  ir.c  lexer.l  libply.c  node.c  provider.c  sym.c  type.c
src/libply/arch/: aarch64.c  arm.c  loongarch64.c  mips.c  powerpc.c  riscv32.c  riscv64.c  x86_64.c
src/libply/aux/: kallsyms.c  perf_event.c  syscall.c  utils.c
src/libply/built-in/: aggregation.c  buffer.c  built-in.c  built-in.h  flow.c  math.c  memory.c  print.c  proc.c
src/libply/provider/: interval.c  kprobe.c  kprobe.h  kretprobe.c  profile.c  special.c  tracepoint.c  xprobe.c  xprobe.h
src/module/: common.c  method.c  module.c  module.h  printf.c  probe.c  quantize.c  trace.c
src/ply/: .gitignore  Makefile.am  ply-gdb.py  ply.c  self-test.sh
src/provider/: arch-arm.c  builtins.c  kprobe.c  provider.c  provider.h
src/pvdr/: arch-arm.c  arch-null.c  arch-x86_64.c  arch.h  builtins.c  kprobe.c  printf.c  pvdr.c  pvdr.h  quantize.c
test/: .gitignore  Makefile  README.md  inittab  rcS  test-wrapper.sh  test.conf  test.sh
test/rootfs/etc/: fstab  hostname  inittab  shadow
test/rootfs/lib/ply/: test-wrapper.sh  test.sh
